fix(RealisationModal): Change z-index to make share modal visible

--- a/client/styles/_realisation-modal.scss
+++ b/client/styles/_realisation-modal.scss
@@ -12,7 +12,7 @@
   right: 0;
   bottom: 0;
   background: white;
-  z-index: 5000;
+  z-index: 99;
   opacity: 0;
   pointer-events: none;
   transition: 0.5s;
